# voxcore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/voxcore/: audio_player.py  cli.py  config.py  stt.py  tts_router.py
src/voxcore_local/: __init__.py  cli.py  config.py  live.py  llm.py  memory.py  memory_manager.py  memory_store.py  microphone.py  pipeline.py  rate_limiter.py  streaming_stt.py  tts.py
tests/: test_config.py  test_memory.py  test_memory_integration.py  test_microphone.py  test_pipeline.py
